# researchTool

./: .gitignore  RAG使用文档.md  README.md  pyproject.toml  skills-lock.json  todolist.md  启动项目.ps1  启动项目.py  实施指南.md  思路.md
.opencode/skills/myresearch/: SKILL.md
.opencode/skills/myresearch/scripts/: run_research.py
.opencode/skills/rag/: SKILL.md  requirements.txt
.opencode/skills/rag/scripts/: rag.py
cli/: generate.py  llm_provider.py  main.py  researcher.py
docs/: architecture.md  cli.md  config.schema.json  configuration.md  重构TODO.md
indexer/: build_index.py  loaders.py  splitter.py  store.py
knowledge/web/: 市面上的1d项目收集.md  概念和解释汇总_按主题分组.md  调研_油田地面1d管网_20260710_154749.md  调研_油田地面1d管网_20260710_154952.md
rag_old/: rag.bat  rag.py  requirements.txt
scripts/: clean_knowledge.py
src/research_tool/: __init__.py  __main__.py
src/research_tool/cli/: app.py  progress.py  provider_menu.py  runtime.py  selector.py  tool_menu.py
src/research_tool/llm/: __init__.py  base.py  models.py  providers.py
src/research_tool/rag/: __init__.py  assistant.py  index.py  loader.py  models.py  store.py
src/research_tool/research/: __init__.py  evidence.py  models.py  tool_runner.py
src/research_tool/shared/: __init__.py  config_import.py  errors.py  events.py  paths.py  settings.py  tooling.py
tests/: test_cli.py  test_configuration.py  test_evidence.py  test_knowledge_repository.py  test_llm_providers.py  test_progress.py  test_rag_assistant.py  test_rag_index.py  test_selector.py  test_skill.py  test_tool_live.py  test_tool_runner.py
